--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div id="vid-container">
         <video id="vid" class="video-js vjs-fluid vjs-default-skin vid-tkmedia" preload="auto" data-setup='{}' autoplay>
-            <source id="vid_source" src="" type="application/x-mpegURL">
+            <source id="vid_source" src="spaceholder.m3u8" type="application/x-mpegURL">
         </video>
     </div>
 
