--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             width: 100%;
         }
         
-        .vid-tkmedia {
+        #vid {
             display: block;
             width: 100%;
             height: 100%;
@@ -69,8 +69,8 @@
         </div>
     </div>
     <div id="vid-container">
-        <video id="vid" class="video-js vjs-fluid vjs-default-skin vid-tkmedia" preload="auto" data-setup='{}' autoplay>
-            <source id="vid_source" src="spaceholder.m3u8" type="application/x-mpegURL">
+        <video id="vid" preload="auto" data-setup='{}' autoplay>
+            <source id="vid_source" src="" type="application/x-mpegURL">
         </video>
     </div>
 
