--- a/index.html
+++ b/index.html
@@ -43,16 +43,25 @@
         
         #vid-container {
             position: absolute;
-            top: 0px;
-            height: 100%;
+            top: 0;
+            bottom: 0;
             width: 100%;
+            height: 100%;
+            overflow: hidden;
         }
         
-        #vid {
-            display: block;
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
+        #vid video {
+            /* Make video to at least 100% wide and tall */
+            min-width: 100%;
+            min-height: 100%;
+            /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+            width: auto;
+            height: auto;
+            /* Center the video */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 
