--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         var time = GetURLParameter('time');
         if (time != undefined) {
             //document.getElementById('vid').currentTime = time;
-            player.setCurrentTime(time)
+            player.currentTime(time);
         }
     </script>
 </body>
