--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background-color: #FFFFFF;
+            background-color: black;
         }
         
         #back-container {
@@ -51,17 +51,9 @@
         }
         
         #vid video {
-            /* Make video to at least 100% wide and tall */
-            min-width: 100%;
-            min-height: 100%;
-            /* Setting width & height to auto prevents the browser from stretching or squishing the video */
-            width: auto;
-            height: auto;
-            /* Center the video */
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 100%;
         }
     </style>
 
