--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div id="vid-container">
         <video id="vid" preload="auto" class="vjs-default-skin" autoplay>
-            <source src="https://manifest.prod.boltdns.net/manifest/v1/hls/v4/clear/6305339580001/d0a435fe-b00d-4365-a917-57d95d9ad2f6/f3fb8415-3112-414b-9dd1-804d188d6a41/6s/rendition.m3u8?fastly_token=NjI3NmY4MjRfNWVmNjU5NTkwNGI1NjBjMWYzYzQxY2ZlMGIwZmM5ZDE1OTMyNmFiMzc1OTZiYzk0MjIzMGUxNDEyYzkzMzVkZg%3D%3D"
+            <source src=""
                 type="application/x-mpegURL">
         </video>
         <script src="video.js"></script>
