--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div id="vid-container">
         <video id="vid" preload="auto" class="vjs-default-skin" autoplay>
-            <source src=""
+            <source src="https://www.m3u8"
                 type="application/x-mpegURL">
         </video>
         <script src="video.js"></script>
