just lots of trys with pure url and blob url, both muted sofar

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div>
     <div id="vid-container">
         <video id="vid" preload="auto" class="vjs-default-skin" autoplay>
-            <source src="https://www.m3u8"
-                type="application/x-mpegURL">
+            <!-- <source src="https://www.m3u8"
+                type="application/x-mpegURL"> -->
         </video>
         <script src="video.js"></script>
         <script src="videojs-http-streaming.js"></script>
@@ -31,6 +31,7 @@
             var player = videojs('vid');
         </script>
         <script src="script.js"></script>
+        <script src="s2.js"></script>
     </div>
 </body>
 
