--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             var player = videojs('vid');
         </script>
         <script src="script.js"></script>
-        <script src="s2.js"></script>
+        <!-- <script src="s2.js"></script> -->
     </div>
 </body>
 
