--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
         </div>
     </div>
     <div id="vid-container">
-        <video id="vid" preload="auto" class="vjs-default-skin" autoplay>
-            <!-- <source src="https://www.m3u8"
-                type="application/x-mpegURL"> -->
-        </video>
+        <!-- <video id="vid" preload="auto" class="vjs-default-skin" autoplay>
+            <source src="https://www.m3u8"
+                type="application/x-mpegURL">
+        </video> -->
         <script src="video.js"></script>
         <script src="videojs-http-streaming.js"></script>
-        <script>
+        <!-- <script>
             var player = videojs('vid');
         </script>
-        <script src="script.js"></script>
-        <!-- <script src="s2.js"></script> -->
+        <script src="script.js"></script> -->
     </div>
+    <!-- <script src="s2.js"></script> -->
+    <script src="s3.js"></script>
 </body>
 
 </html>
